* NEW: Added the Git version to the Splash Screen, to more easily identify bugs in specific releases.
* NEW: Added the "-local" command line switch, to have the program load in portable mode.
* NEW: Added links to The Organizer guide to the online manual help system
* NEW: Unknown elements that may have been added by other software to the ComicInfo.xml will be kept, these will also be saved in the database.
* NEW: Articles in IgnoredArticles can now terminate with an apostrophe (Like L').
* NEW: Added French articles (Le, La, Les, L') as default in IgnoredArticles.
* NEW: Remember the Location & Size of Script Output Console by the Workspace system. Since the Workspace system is configured via the Main window, the console will load at the default location but be restored once the Main window is loaded.
* NEW: Quick Search (using Mode All) will now search Scan Information & Custom Fields.
* NEW: Added the Web field to smart list, so no more need to use expressions. (Again backup your DB, this could result in a corrupted database if going back to an older version)

* CHANGE: Updated to .NET Framework v4.8.
* CHANGE: Updated the Splash Screen and Renamed the Program to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition. 
* CHANGE: Removed Android Validation of apk signature (so we can use the cracked version). Has no incidence on whether the sync icon appears.
* CHANGE: Updated default sort to be natural sorting (numeric).
* CHANGE: Switched MySQl library to MySQLConnector for better speed & compatibility with MariaDB (Yes current versions work).
* CHANGE: Alternate config (-ac) can now be used with portable mode (UseLocalSettings) (-local).
* CHANGE: Removed everything to do with Validation/Donation/PayPal.
* CHANGE: Removed everything to do with Twitter.
* CHANGE: Updated SharpZipLib to v1.4.2.
* CHANGE: Updated SharpCompress to v0.36.
* CHANGE: Updated WindowsCodePack to V1.15.